2009-05-05  Bin Li <bin.li@ricoh-tech.com>
	
	* PPD/, printer/: Updated 1203 Ricoh Family XML files to add instructions about Custom Options and PPD files download.

2009-05-04  Bin Li <bin.li@ricoh-tech.com>
	
	* PPD/, printer/: Updated 1203 Ricoh Family PPD files to support Custom Options and fixed the JOBPASSWORD2 problems.

2009-04-21  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/HP-LaserJet_2055.xml, printer/HP-LaserJet_2300L.xml,
	  printer/Lexmark-T430.xml, driver/Postscript.xml: added new
	  printers (bugs #331, #332, #333).

	* printer/HP-LaserJet_2300.xml, printer/HP-LaserJet_4100.xml: Corrected
	  auto-detection info (bugs #330, #333).

2009-04-20  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Dell-3010cn.xml, driver/dplix.xml: Added new "dplix" driver
	  and the Dell 3010 cn printer.

	* driver/cdnj500.xml, printer/HP-DesignJet_110.xml,
	  printer/HP-DesignJet_130.xml, printer/HP-DesignJet_30.xml,
	  printer/HP-DesignJet_70.xml, printer/HP-DesignJet_90.xml,
	  driver/chp2200.xml, driver/dnj650c.xml, opt/2.xml, opt/68.xml,
	  opt/69.xml, opt/70.xml, opt/largeformat-PageSize.xml,
	  printer/HP-DesignJet_500.xml, printer/HP-DesignJet_800.xml:
	  Updated DesignJet data: DesignJet 500/800 do not work with
	  "chp2200" (bug #309), new driver "cdnj500" for DesignJet
	  500/800, DesignJet 30/70/90/110/130 work with "chp2200".

2009-03-27  Till Kamppeter <till.kamppeter@gmail.com>

	* db/source/driver/gutenprint.xml: Updated to Gutenprint version 5.2.3,
	  corrected the model names for Ricoh and OEM printers so that they
	  match with the printer entries in the OpenPrinting database, removed
	  references to large format ("LF") generic PCL printers.

2009-03-17  Dafydd Crosby <dcrosby@userful.com>

	* printer/Genicom-microLaser_210.xml: LP # 343444 - added XML profile,
	  PPD located in foomatic-db-nonfree
	
2009-03-09  Bin Li <bin.li@ricoh-tech.com>
	