@@ -160,5 +160,8 @@
   <printer>
    <id>printer/Lexmark-E210</id>
   </printer>
+  <printer>
+   <id>printer/Xerox-Phaser_3110</id>
+  </printer>
  </printers>
 </driver>
