@@ -1,0 +1,23 @@
+<printer id="printer/Xerox-Phaser_3110">
+   <make>Xerox</make>
+   <model>Phaser 3110</model>
+   <mechanism>
+   <!--not "color"-->
+      <laser/>
+      <resolution>
+      </resolution>
+      <consumables></consumables>
+   </mechanism>
+   <url></url>
+   <lang>
+      <!--no pjl-->
+      <!--no "text"-->
+   </lang>
+   <functionality>B</functionality>
+   <driver>gdi</driver>
+   <comments>
+      <en>
+	Compatible with the Samsumg ML-1210
+      </en>
+   </comments>
+</printer>
