@@ -1,10 +1,17 @@
+2009-05-09  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* printer/Xerox-Phaser_3110.xml, driver/gdi.xml: Added the Xerox
+	  Phaser 3110 (Ubuntu bug #371737).
+	
 2009-05-05  Bin Li <bin.li@ricoh-tech.com>
 	
-	* PPD/, printer/: Updated 1203 Ricoh Family XML files to add instructions about Custom Options and PPD files download.
+	* PPD/, printer/: Updated 1203 Ricoh Family XML files to add
+	  instructions about Custom Options and PPD files download.
 
 2009-05-04  Bin Li <bin.li@ricoh-tech.com>
 	
-	* PPD/, printer/: Updated 1203 Ricoh Family PPD files to support Custom Options and fixed the JOBPASSWORD2 problems.
+	* PPD/, printer/: Updated 1203 Ricoh Family PPD files to support
+	  Custom Options and fixed the JOBPASSWORD2 problems.
 
 2009-04-21  Till Kamppeter <till.kamppeter@gmail.com>
 
